--- a/Depo/Depo/Presentation/UserStories/InstaPick/InstaPickCampaign/InstaPickCampaignViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/InstaPick/InstaPickCampaign/InstaPickCampaignViewController.xib
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="InstaPickCampaignViewController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="InstaPickCampaignViewController" customModule="LifeTech_lifedrive" customModuleProvider="target">
             <connections>
                 <outlet property="bottomViewDescriptionLabel" destination="tY4-Ke-cKD" id="fpG-Tx-iJm"/>
                 <outlet property="bottomViewImage" destination="gwi-ac-Yu2" id="dr1-hy-Ipo"/>
@@ -35,29 +35,29 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w9q-6G-Q1c">
                                     <rect key="frame" x="13" y="18" width="356" height="201.66666666666666"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camapaignPremiumBackground" translatesAutoresizingMaskIntoConstraints="NO" id="f4I-zY-brU" customClass="LoadingImageView" customModule="lifebox" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="356" height="100.66666666666667"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camapaignPremiumBackground" translatesAutoresizingMaskIntoConstraints="NO" id="f4I-zY-brU" customClass="LoadingImageView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="356" height="90"/>
                                         </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="CONGRATS ! " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dxd-7L-HIE">
+                                            <rect key="frame" x="45" y="20" width="266" height="20.333333333333329"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="i4K-fp-CsQ">
-                                            <rect key="frame" x="15" y="20" width="326" height="171.66666666666666"/>
+                                            <rect key="frame" x="15" y="50.333333333333343" width="326" height="141.33333333333334"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="CONGRATS ! " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dxd-7L-HIE">
-                                                    <rect key="frame" x="0.0" y="0.0" width="326" height="20.333333333333332"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v6f-gE-6AG">
-                                                    <rect key="frame" x="0.0" y="30.333333333333336" width="326" height="81.333333333333314"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="326" height="81.333333333333329"/>
                                                     <string key="text">You just got the chance to participate the contest. For having more chance, tomorrow analyze with PP again. Lorem ipsum dolor sit amet.</string>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dde-4K-Umi">
-                                                    <rect key="frame" x="0.0" y="121.66666666666666" width="326" height="50"/>
+                                                    <rect key="frame" x="0.0" y="91.333333333333314" width="326" height="50"/>
                                                     <subviews>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bgz-pl-dnh" customClass="GradientPremiumButton" customModule="lifebox" customModuleProvider="target">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bgz-pl-dnh" customClass="GradientPremiumButton" customModule="LifeTech_lifedrive" customModuleProvider="target">
                                                             <rect key="frame" x="81.666666666666686" y="0.0" width="163" height="50"/>
                                                             <state key="normal" title="title"/>
                                                             <connections>
@@ -90,14 +90,16 @@
                                     </subviews>
                                     <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
+                                        <constraint firstItem="dxd-7L-HIE" firstAttribute="top" secondItem="w9q-6G-Q1c" secondAttribute="top" constant="20" id="50F-UC-e1N"/>
+                                        <constraint firstItem="i4K-fp-CsQ" firstAttribute="top" secondItem="dxd-7L-HIE" secondAttribute="bottom" constant="10" id="91q-lz-hCA"/>
                                         <constraint firstItem="f4I-zY-brU" firstAttribute="leading" secondItem="w9q-6G-Q1c" secondAttribute="leading" id="9an-7w-xKP"/>
-                                        <constraint firstItem="f4I-zY-brU" firstAttribute="height" secondItem="w9q-6G-Q1c" secondAttribute="height" multiplier="0.5" id="Bh9-G8-N57"/>
+                                        <constraint firstItem="OU6-Hi-gcV" firstAttribute="leading" secondItem="dxd-7L-HIE" secondAttribute="trailing" id="CgI-KZ-GPA"/>
                                         <constraint firstItem="i4K-fp-CsQ" firstAttribute="leading" secondItem="w9q-6G-Q1c" secondAttribute="leading" constant="15" id="TZl-07-GkT"/>
                                         <constraint firstItem="f4I-zY-brU" firstAttribute="top" secondItem="w9q-6G-Q1c" secondAttribute="top" id="YLw-IG-y2o"/>
-                                        <constraint firstItem="i4K-fp-CsQ" firstAttribute="top" secondItem="w9q-6G-Q1c" secondAttribute="top" constant="20" id="du5-eo-4Dk"/>
                                         <constraint firstAttribute="trailing" secondItem="f4I-zY-brU" secondAttribute="trailing" id="fDe-fS-ITX"/>
                                         <constraint firstAttribute="trailing" secondItem="i4K-fp-CsQ" secondAttribute="trailing" constant="15" id="ka6-OT-phI"/>
                                         <constraint firstAttribute="trailing" secondItem="OU6-Hi-gcV" secondAttribute="trailing" constant="15" id="p5n-C2-g9m"/>
+                                        <constraint firstItem="dxd-7L-HIE" firstAttribute="leading" secondItem="w9q-6G-Q1c" secondAttribute="leading" constant="45" id="tAG-vc-rO0"/>
                                         <constraint firstAttribute="bottom" secondItem="i4K-fp-CsQ" secondAttribute="bottom" constant="10" id="vPG-sq-NZZ"/>
                                         <constraint firstItem="OU6-Hi-gcV" firstAttribute="top" secondItem="w9q-6G-Q1c" secondAttribute="top" constant="15" id="vjK-AZ-OIi"/>
                                     </constraints>
@@ -105,7 +107,7 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D4g-cO-eES">
                                     <rect key="frame" x="13" y="229.66666666666666" width="356" height="314.66666666666674"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gwi-ac-Yu2" customClass="LoadingImageView" customModule="lifebox" customModuleProvider="target">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gwi-ac-Yu2" customClass="LoadingImageView" customModule="LifeTech_lifedrive" customModuleProvider="target">
                                             <rect key="frame" x="10" y="10" width="336" height="149.33333333333334"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="gwi-ac-Yu2" secondAttribute="height" multiplier="18:8" id="bUP-3k-oki"/>
@@ -128,7 +130,7 @@
                                                 </label>
                                             </subviews>
                                         </stackView>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vbY-DE-1ed" customClass="RoundedButton" customModule="lifebox" customModuleProvider="target">
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vbY-DE-1ed" customClass="RoundedButton" customModule="LifeTech_lifedrive" customModuleProvider="target">
                                             <rect key="frame" x="37" y="265.66666666666669" width="282" height="44"/>
                                             <state key="normal" title="Button"/>
                                             <connections>
@@ -147,7 +149,7 @@
                                         <constraint firstItem="vbY-DE-1ed" firstAttribute="top" secondItem="AJs-Mu-dVQ" secondAttribute="bottom" constant="5" id="yP3-eP-6Wo"/>
                                     </constraints>
                                 </view>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B1X-wI-m0r" customClass="BlueButtonWithMediumWhiteText" customModule="lifebox" customModuleProvider="target">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B1X-wI-m0r" customClass="BlueButtonWithMediumWhiteText" customModule="LifeTech_lifedrive" customModuleProvider="target">
                                     <rect key="frame" x="50" y="554.33333333333337" width="282" height="44"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="44" id="eNQ-T7-oJG"/>
@@ -199,7 +201,7 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="137.68115942028987" y="106.79347826086958"/>
         </view>
-        <customObject id="M3K-BN-i3Y" customClass="InstaPickCampaignViewControllerDesigner" customModule="lifebox" customModuleProvider="target">
+        <customObject id="M3K-BN-i3Y" customClass="InstaPickCampaignViewControllerDesigner" customModule="LifeTech_lifedrive" customModuleProvider="target">
             <connections>
                 <outlet property="backgroundView" destination="i5M-Pr-FkT" id="GLO-vD-sjG"/>
                 <outlet property="bottomView" destination="D4g-cO-eES" id="Fev-IP-1eC"/>
