--- a/Depo/Depo/Presentation/UserStories/OverlaySticker/OverlayStickerViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/OverlaySticker/OverlayStickerViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -142,7 +142,7 @@
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Uau-P5-dnP" secondAttribute="bottom" id="8Cs-73-KYq"/>
                 <constraint firstItem="dv4-cf-xPu" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Bio-r9-msj"/>
-                <constraint firstItem="dv4-cf-xPu" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="a53-A6-bar"/>
+                <constraint firstItem="dv4-cf-xPu" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="44" id="a53-A6-bar" customClass="TopSafeAreaConstraint" customModule="lifebox"/>
                 <constraint firstItem="Uau-P5-dnP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="bY2-ex-n3u"/>
                 <constraint firstAttribute="trailing" secondItem="dv4-cf-xPu" secondAttribute="trailing" id="dgq-Q0-Gfq"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="dv4-cf-xPu" secondAttribute="bottom" id="nvo-xr-v6W"/>
