FE-2728, iOS: Top Crash: protocol witness for PhotoVideoDetailViewInput.updatePeople(items:) in conformance PhotoVideoDetailViewController (DEV3)

--- a/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/FileInfoView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/FileInfoView.xib
@@ -258,7 +258,7 @@
                                                             <constraints>
                                                                 <constraint firstAttribute="height" priority="250" constant="130" id="2Bn-ix-P3n"/>
                                                             </constraints>
-                                                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="BVK-Gk-yEY">
+                                                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="BVK-Gk-yEY">
                                                                 <size key="itemSize" width="50" height="50"/>
                                                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
